--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -795,66 +795,60 @@ div {
   }
 }
 
-.dashboard-stats {
-  box-shadow: $table-box-shadow;
-  margin-right: $table-margin-y;
-  margin-bottom: $table-margin-y;
-  overflow-x: auto;
-  overflow-y: hidden;
+.dashboard-next {
+  .charts {
+    margin-bottom: ($card-inner-spacer-y * -1);
 
-  @media (max-width: $admin-breakpoint) {
-    margin-right: 0;
+    .chart {
+      margin-bottom: $card-inner-spacer-y;
+    }
   }
 
-  &.detected-problems {
-    align-items: flex-start;
-    display: flex;
-    margin-bottom: $table-margin-y;
+  .community-health,
+  .section-top {
+    margin-bottom: $spacer-lg;
+  }
 
-    .look-here {
-      margin: $tbody-cell-padding-y 0 $tbody-cell-padding-y $tbody-cell-padding-x;
+  .section {
+    .section-body {
+      @extend %card;
+      @extend %card-block;
     }
 
-    .problem-messages {
-      margin-left: 0;
-      padding: $tbody-cell-padding-y $tbody-cell-padding-x;
-      width: 100%;
+    .section-title {
+      border-bottom: 0;
+      margin-bottom: $spacer-sm;
+      padding-bottom: 0;
 
-      .actions {
-        margin-bottom: 0;
-
-        small {
-          display: block;
-          margin-bottom: ($tbody-cell-padding-y / 2);
-        }
+      h2 {
+        margin-right: $spacer;
       }
     }
   }
 
-  &.pull-right {
-    box-shadow: none;
-    margin-right: 0;
-    margin-bottom: 0;
-  }
+  .section-columns .section-column {
+    width: calc(50% - #{$spacer-lg / 2});
 
-  &.totals {
-    margin-top: $table-margin-y;
-    padding-left: 0;
-  }
+    &:first-child {
+      margin-right: ($spacer-lg / 2);
+    }
 
-  .dashboard-right & {
-    margin-right: 0;
+    &:last-child {
+      margin-left: ($spacer-lg / 2);
+    }
   }
+}
 
-  > a {
-    display: inline-block;
-    margin: $tbody-cell-padding-y $tbody-cell-padding-x;
-  }
+.dashboard-stats {
+  @extend %card;
+  @extend %card-block;
+}
 
-  table,
-  table:not(.pika-table) {
-    box-shadow: none;
-    margin-bottom: 0;
+.dashboard-table {
+  margin-bottom: $spacer-lg;
+
+  .table-title h3 {
+    margin: 0 0 $spacer-sm;
   }
 }
 
@@ -1355,13 +1349,32 @@ div {
 }
 
 .version-check {
-  .face {
-    width: $material-icon-size;
-  }
-
   .version-number {
+    flex: 1 0 auto;
     font-size: inherit;
     font-weight: bolder;
+    line-height: inherit;
+    margin: 0;
+    padding-right: 0;
+  }
+
+  .version-status {
+    flex: 1 0 auto;
+    margin: 0;
+    min-width: 0;
+    padding-right: 0;
+
+    .face {
+      font-size: $material-icon-size;
+      margin-right: $card-inner-spacer-x;
+    }
+  }
+}
+
+.version-checks {
+  .section-title {
+    border-bottom: 0;
+    margin-bottom: 0;
   }
 }
 
