Convert fa file to md insert drive file

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -194,6 +194,10 @@
   @include material-icons('skip_next');
 }
 
+.fa-file {
+  @include material-icons('insert_drive_file');
+}
+
 .fa-file-text-o {
   @include material-icons('description');
 }
