Convert fa archive to md archive

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -6,6 +6,10 @@
   @include material-icons('arrow_downward');
 }
 
+.fa-archive {
+  @include material-icons('archive');
+}
+
 .fa-arrows-h {
   @include material-icons('swap_horiz');
 }
