Make use of `$grid-gutter-width-lg`

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -12,8 +12,8 @@
     right: 1px;
   }
 
-  @media (min-width: ($container-max-width + $spacer-lg * 2)) {
-    right: $spacer-lg;
+  @media (min-width: ($container-max-width + $grid-gutter-width-lg * 2)) {
+    right: $grid-gutter-width-lg;
   }
 
   &.closed {
