--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -431,7 +431,7 @@
 .admin-detail {
   background-color: transparent;
   border-left: 0;
-  padding: 0 0 0 $spacer-lg;
+  padding: 0 0 0 $grid-gutter-width-lg;
   width: 80%;
 
   @media (max-width: $admin-breakpoint) {
@@ -484,7 +484,7 @@
   width: 20%;
 
   @media (max-width: $admin-breakpoint) {
-    padding-right: $spacer-lg;
+    padding-right: $grid-gutter-width-lg;
     width: 50%;
   }
 }
@@ -713,7 +713,7 @@ div {
 
 .content-list {
   flex-shrink: 0;
-  margin-right: $spacer-lg;
+  margin-right: $grid-gutter-width-lg;
   width: 20%;
 
   @media (max-width: $admin-breakpoint) {
@@ -792,7 +792,7 @@ div {
   @extend %card-block;
 
   margin-bottom: $spacer-lg;
-  margin-left: $grid-gutter-width;
+  margin-left: $grid-gutter-width-lg;
 
   .table-title {
     border-bottom: 0;
@@ -815,7 +815,7 @@ div {
 }
 
 .dashboard-left {
-  padding-right: ($grid-gutter-width / 2);
+  padding-right: ($grid-gutter-width-lg / 2);
 
   @media (max-width: $admin-breakpoint) {
     padding-right: 0;
@@ -886,20 +886,20 @@ div {
   }
 
   .section-columns .section-column {
-    width: calc(50% - #{$spacer-lg / 2});
+    width: calc(50% - #{$grid-gutter-width-lg / 2});
 
     &:first-child {
-      margin-right: ($spacer-lg / 2);
+      margin-right: ($grid-gutter-width-lg / 2);
     }
 
     &:last-child {
-      margin-left: ($spacer-lg / 2);
+      margin-left: ($grid-gutter-width-lg / 2);
     }
   }
 }
 
 .dashboard-right {
-  padding-left: ($grid-gutter-width / 2);
+  padding-left: ($grid-gutter-width-lg / 2);
 
   @media (max-width: $admin-breakpoint) {
     padding-left: 0;
@@ -1379,10 +1379,10 @@ div {
 }
 
 .user-metrics {
-  margin: 0 0 0 ($grid-gutter-width * -1);
+  margin: 0 0 0 ($grid-gutter-width-lg * -1);
 
   .dashboard-inline-table {
-    max-width: calc(100% - #{$grid-gutter-width});
+    max-width: calc(100% - #{$grid-gutter-width-lg});
   }
 
   .table-cell {
