--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -141,8 +141,8 @@
   width: auto;
 
   @media (min-width: 569px) {
-    margin-right: $spacer-lg;
-    width: calc(50% - #{$spacer-lg / 2});
+    margin-right: $grid-gutter-width-lg;
+    width: calc(50% - #{$grid-gutter-width-lg / 2});
 
     &:last-child {
       margin-right: 0;
@@ -647,7 +647,7 @@
 }
 
 .user-navigation {
-  margin-right: $spacer-lg;
+  margin-right: $grid-gutter-width-lg;
   padding-left: 0;
 
   .dismiss-notifications {
