--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -505,6 +505,11 @@
 
     overflow: hidden;
 
+    .alert {
+      box-shadow: none;
+      margin-bottom: 0;
+    }
+
     .avatar-link {
       margin-right: $card-inner-spacer-x;
 
@@ -620,6 +625,13 @@
     .title {
       margin-right: $card-inner-spacer-x;
     }
+  }
+}
+
+.user-right {
+  > .alert:first-child,
+  > .user-stream > .alert:first-child {
+    margin-top: 0;
   }
 }
 
@@ -743,7 +755,7 @@
     &:last-child {
       margin-bottom: 0;
 
-      .control-group:last-child {
+      .control-group.save-button {
         margin-bottom: 0;
       }
     }
@@ -800,5 +812,84 @@
         flex-grow: 1;
       }
     }
+  }
+}
+
+.user-theme-creator {
+  align-items: flex-start;
+  border-top: 0;
+  margin-top: 0;
+  padding-top: 0;
+  width: 100%;
+
+  .ace-wrapper {
+    background-color: color-chooser($card-bg-dark, $card-bg-light);
+    border: 1px solid color-chooser($white-divider, $black-divider);
+  }
+
+  .admin-controls {
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  .edit-main-nav {
+    border: 1px solid color-chooser($white-divider, $black-divider);
+    border-bottom: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  .theme-details {
+    @extend %card;
+    @extend %card-block;
+
+    flex: 1 0 auto;
+    margin-bottom: $spacer-lg;
+    margin-left: 0;
+    width: auto;
+
+    h1,
+    h2 {
+      margin-bottom: $spacer-sm;
+
+      a {
+        font-size: $font-size-base;
+        line-height: 1;
+        vertical-align: middle;
+      }
+    }
+
+    h3 {
+      margin-top: 0;
+      margin-bottom: $spacer-sm;
+    }
+
+    .btn {
+      @extend %btn-raised;
+    }
+  }
+
+  .theme-list {
+    margin-bottom: $spacer-lg;
+
+    > :last-child {
+      margin-bottom: 0;
+    }
+
+    ul {
+      margin-bottom: $spacer;
+    }
+
+    .btn {
+      @extend %btn-raised;
+
+      display: block;
+      width: 100%;
+    }
+  }
+
+  .user-theme-button {
+    margin: $card-inner-spacer-y $card-inner-spacer-x 0 0;
   }
 }
