--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -268,6 +268,15 @@ nav {
   }
 }
 
+.moderator .regular > .cooked {
+  padding-top: $card-padding-y;
+  padding-bottom: $card-padding-y;
+
+  + .post-menu-area {
+    margin-top: 0;
+  }
+}
+
 .names .fa {
   color: inherit;
   margin-left: $spacer-xs;
@@ -642,6 +651,14 @@ nav {
     @extend %card-block;
 
     background-color: color-chooser($card-child-bg-dark, $card-child-bg-light);
+
+    &.toggle-summary {
+      .btn {
+        @extend %btn-raised;
+
+        margin-left: 0;
+      }
+    }
 
     > h3 {
       margin-bottom: 0;
