Convert fa check square to md check box

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -82,6 +82,10 @@
   @include material-icons('check');
 }
 
+.fa-check-square {
+  @include material-icons('check_box');
+}
+
 .fa-check-square-o {
   @include material-icons('check_box');
 }
