Minor form fixes

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -426,7 +426,9 @@ $thead-font-size:          12px !default;
 $text-field-border-color-dark:           rgba(255, 255, 255, .7) !default;
 $text-field-border-color-light:          rgba(0, 0, 0, .42) !default;
 $text-field-border-color-disabled-dark:  rgba(255, 255, 255, .5) !default;
-$text-field-border-color-disabled-light: rgba(0, 0, 0, .42) !default;
+$text-field-border-color-disabled-light: rgba(0, 0, 0, .26) !default;
+$text-field-border-color-hover-dark:     rgba(255, 255, 255, 1) !default;
+$text-field-border-color-hover-light:    rgba(0, 0, 0, .87) !default;
 $text-field-border-width:                1px !default;
 $text-field-font-size:                   16px !default;
 $text-field-height:                      36px !default;
