--- a/scss/common/_form-auto-complete.scss
+++ b/scss/common/_form-auto-complete.scss
@@ -85,6 +85,7 @@ div {
 
     input[type='text'] {
       border-radius: 0;
+      box-shadow: none;
       height: auto;
       margin-right: $spacer-xs;
       padding: 0 !important;
