--- a/scss/common/_form-d-editor.scss
+++ b/scss/common/_form-d-editor.scss
@@ -39,7 +39,7 @@
   padding: $card-padding-y $card-padding-x;
 
   @include focus-hover {
-    padding: $card-padding-y $card-padding-x;
+    box-shadow: none;
   }
 
   .d-editor-button-bar ~ & {
