--- a/scss/extensions/_text-field.scss
+++ b/scss/extensions/_text-field.scss
@@ -14,14 +14,14 @@
   padding: $text-field-padding-y $text-field-padding-x ($text-field-padding-y - $text-field-border-width);
   width: 100%;
 
-  @include focus-hover {
-    border-width: ($text-field-border-width * 2);
-    padding-bottom: ($text-field-padding-y - $text-field-border-width * 2);
+  &:hover {
+    border-color: color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
+    box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
   }
 
   &:focus {
     border-color: unquote('$tertiary');
-    box-shadow: none;
+    box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) unquote('$tertiary');
     outline: 0;
   }
 
@@ -40,8 +40,4 @@
   height: $text-field-box-height;
   line-height: ($text-field-box-height - $text-field-box-padding-y * 2);
   padding: $text-field-box-padding-y $text-field-box-padding-x ($text-field-box-padding-y - $text-field-border-width);
-
-  @include focus-hover {
-    padding-bottom: ($text-field-box-padding-y - $text-field-border-width * 2);
-  }
 }
