--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -231,6 +231,10 @@
       }
     }
 
+    .bottom-row {
+      line-height: 1;
+    }
+
     .top-row {
       font-size: inherit;
       margin-bottom: $spacer-xs;
