--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -531,7 +531,7 @@ nav {
     }
   }
 
-  > div {
+  > div:not(.topic-notifications-button) {
     align-items: flex-start;
     display: flex;
     flex-basis: 0;
@@ -572,7 +572,6 @@ nav {
 
     .reason {
       line-height: $line-height-base;
-      margin-top: (($btn-height - $font-size-base * $line-height-base) / 2);
       margin-bottom: 0;
       margin-left: $card-margin-x;
     }
