--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -26,6 +26,10 @@
   background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
   color: $danger;
 }
+.mobile-view .mobile-nav > li > a.btn-danger:active, .mobile-view .mobile-nav > li > a.btn-danger.btn-active, .mobile-view .mobile-nav > li > a.cancel:active, .mobile-view .mobile-nav > li > a.cancel.btn-active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+  background-image: none;
+}
 .mobile-view .mobile-nav > li > a.btn-primary {
   background-color: transparent;
   color: $tertiary;
@@ -34,6 +38,10 @@
   background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
   color: $tertiary;
 }
+.mobile-view .mobile-nav > li > a.btn-primary:active, .mobile-view .mobile-nav > li > a.btn-primary.btn-active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+  background-image: none;
+}
 .mobile-view .mobile-nav > li > a.btn-success, .mobile-view .mobile-nav > li > a.ok {
   background-color: transparent;
   color: $success;
@@ -41,6 +49,10 @@
 .mobile-view .mobile-nav > li > a.btn-success:focus, .mobile-view .mobile-nav > li > a.btn-success:hover, .mobile-view .mobile-nav > li > a.ok:focus, .mobile-view .mobile-nav > li > a.ok:hover {
   background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
   color: $success;
+}
+.mobile-view .mobile-nav > li > a.btn-success:active, .mobile-view .mobile-nav > li > a.btn-success.btn-active, .mobile-view .mobile-nav > li > a.ok:active, .mobile-view .mobile-nav > li > a.ok.btn-active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+  background-image: none;
 }
 
 .mobile-view .mobile-nav > li > a {
@@ -120,6 +132,13 @@
   background-color: $danger;
   color: color-dynamic($danger);
 }
+.mobile-view .mobile-nav > li > a.btn-danger:active, .list-controls .nav > li > a.btn-danger:active, .btn-danger.show-topic-admin:active, .user-navigation > .btn-danger.btn:active,
+.user-navigation .user-archive .btn-danger.btn:active, .mobile-view .mobile-nav > li > a.btn-danger.btn-active, .list-controls .nav > li > a.btn-danger.btn-active, .btn-danger.btn-active.show-topic-admin, .user-navigation > .btn-danger.btn-active.btn,
+.user-navigation .user-archive .btn-danger.btn-active.btn, .mobile-view .mobile-nav > li > a.cancel:active, .list-controls .nav > li > a.cancel:active, .cancel.show-topic-admin:active, .user-navigation > .cancel.btn:active,
+.user-navigation .user-archive .cancel.btn:active, .mobile-view .mobile-nav > li > a.cancel.btn-active, .list-controls .nav > li > a.cancel.btn-active, .cancel.btn-active.show-topic-admin, .user-navigation > .cancel.btn-active.btn,
+.user-navigation .user-archive .cancel.btn-active.btn {
+  background-color: $danger;
+}
 .mobile-view .mobile-nav > li > a.btn-primary, .list-controls .nav > li > a.btn-primary, .btn-primary.show-topic-admin, .user-navigation > .btn-primary.btn,
 .user-navigation .user-archive .btn-primary.btn {
   background-color: $tertiary;
@@ -130,6 +149,11 @@
 .user-navigation .user-archive .btn-primary.btn:hover {
   background-color: $tertiary;
   color: color-dynamic($tertiary);
+}
+.mobile-view .mobile-nav > li > a.btn-primary:active, .list-controls .nav > li > a.btn-primary:active, .btn-primary.show-topic-admin:active, .user-navigation > .btn-primary.btn:active,
+.user-navigation .user-archive .btn-primary.btn:active, .mobile-view .mobile-nav > li > a.btn-primary.btn-active, .list-controls .nav > li > a.btn-primary.btn-active, .btn-primary.btn-active.show-topic-admin, .user-navigation > .btn-primary.btn-active.btn,
+.user-navigation .user-archive .btn-primary.btn-active.btn {
+  background-color: $tertiary;
 }
 .mobile-view .mobile-nav > li > a.btn-success, .list-controls .nav > li > a.btn-success, .btn-success.show-topic-admin, .user-navigation > .btn-success.btn,
 .user-navigation .user-archive .btn-success.btn, .mobile-view .mobile-nav > li > a.ok, .list-controls .nav > li > a.ok, .ok.show-topic-admin, .user-navigation > .ok.btn,
@@ -144,6 +168,13 @@
 .user-navigation .user-archive .ok.btn:hover {
   background-color: $success;
   color: color-dynamic($success);
+}
+.mobile-view .mobile-nav > li > a.btn-success:active, .list-controls .nav > li > a.btn-success:active, .btn-success.show-topic-admin:active, .user-navigation > .btn-success.btn:active,
+.user-navigation .user-archive .btn-success.btn:active, .mobile-view .mobile-nav > li > a.btn-success.btn-active, .list-controls .nav > li > a.btn-success.btn-active, .btn-success.btn-active.show-topic-admin, .user-navigation > .btn-success.btn-active.btn,
+.user-navigation .user-archive .btn-success.btn-active.btn, .mobile-view .mobile-nav > li > a.ok:active, .list-controls .nav > li > a.ok:active, .ok.show-topic-admin:active, .user-navigation > .ok.btn:active,
+.user-navigation .user-archive .ok.btn:active, .mobile-view .mobile-nav > li > a.ok.btn-active, .list-controls .nav > li > a.ok.btn-active, .ok.btn-active.show-topic-admin, .user-navigation > .ok.btn-active.btn,
+.user-navigation .user-archive .ok.btn-active.btn {
+  background-color: $success;
 }
 
 #reply-control .contents .submit-panel .btn, .user-main .about .controls a {
