--- a/common/common.scss
+++ b/common/common.scss
@@ -956,6 +956,17 @@ tr {
 .badge-wrapper.box span.badge-category-bg {
   border-radius: 16px;
 }
+.badge-wrapper.box span.badge-category-parent-bg {
+  border-radius: 16px;
+  width: calc(100% - 4px);
+}
+.badge-wrapper.box span.badge-category-parent-bg + .badge-category-bg {
+  left: 4px;
+  width: calc(100% - 4px);
+}
+.badge-wrapper.box span.badge-category-parent-bg + .badge-category-bg + .badge-category {
+  margin-left: 4px;
+}
 .badge-wrapper.box .badge-category {
   -ms-flex-align: center;
       align-items: center;
@@ -2179,6 +2190,7 @@ div.ac-wrap input[type='text'] {
   margin-left: 4px;
 }
 .select-kit .select-kit-header .selected-name .badge-wrapper {
+  font-size: 13px;
   margin-right: 0;
   -webkit-transform: scale(0.75);
           transform: scale(0.75);
@@ -2377,10 +2389,6 @@ ol.category-breadcrumb > li {
   position: relative;
 }
 
-.category-drop.combo-box.select-kit .badge-wrapper.box span.badge-category {
-  margin-left: 36px;
-}
-
 .category-navigation {
   -ms-flex-align: start;
       align-items: flex-start;
@@ -2396,10 +2404,6 @@ ol.category-breadcrumb > li {
 
 .list-controls {
   margin-bottom: 16px;
-}
-.list-controls a.badge-category {
-  font-size: inherit;
-  padding: 0;
 }
 .list-controls .btn {
   font-size: 14px;
@@ -5236,10 +5240,6 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   white-space: nowrap;
   width: 0;
 }
-.topic-list td.category,
-.topic-list th.category {
-  height: 56px;
-}
 .topic-list td.num,
 .topic-list th.num {
   text-align: right;
@@ -5505,16 +5505,12 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   margin-bottom: 24px;
   padding: 0;
 }
+#suggested-topics h3 .badge-wrapper.box span {
+  display: block;
+}
 #suggested-topics h3 .badge-wrapper.bullet {
-  line-height: 1;
+  line-height: 1.428571;
   vertical-align: middle;
-}
-#suggested-topics h3 .badge-wrapper.bullet span.badge-category {
-  display: inline-block;
-  line-height: 32px;
-}
-#suggested-topics h3 .badge-wrapper.bullet span.badge-category-bg, #suggested-topics h3 .badge-wrapper.bullet span.badge-category-parent-bg {
-  line-height: 1;
 }
 #suggested-topics table {
   margin-top: 0;
