Misc changes to fix some edge cases for post

--- a/scss/common/_code.scss
+++ b/scss/common/_code.scss
@@ -38,7 +38,9 @@ pre {
   margin-bottom: $spacer;
   padding: $pre-padding;
 
-  .admin-interface & {
+  blockquote &,
+  .admin-interface &,
+  .onebox & {
     background-color: color-chooser($light-active, $dark-active);
   }
 
